fix side bar not width 100 on main page on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -270,6 +270,11 @@ button:active {
 
 
 @media (max-width: 767px) {
+
+    .sidebar{
+        width: 100%;
+        min-height: auto;
+    }
     .content-body {
         padding: 20px;
     }
